[metadata]
name = AsyncWebsocketStreamInterface
version = 1.0.5
author = Antas
description = Exchange one normal asynchronous websocket connection to unlimited number of data streams.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monk-after-90s/AsyncWebsocketStreamInterface
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
[options]
packages = find:
python_requires = >=3.7
install_requires =
    beeprint
    websockets
    ensureTaskCanceled
    loguru
    NoLossAsyncGenerator
    AsyncExclusivePeriods
